@startuml
skinparam linetype ortho
'hide circle

package Instance {
    abstract class ProblemInstance {
        +isEmpty(): boolean
        +toSerializedString(): string
        +asString(): string
    }

    class CNF3 extends ProblemInstance {
        +variables: VarName[]
        +clauses: Clause[]
        +fromString(input: string): CNF3
    }

    class Graph extends ProblemInstance {
        +nodes: GraphNode[]
        +edges: GraphEdge[]
        +directed: boolean
        +fromString(input: string): Graph
    }

    class SSP extends ProblemInstance {
        +numbers: SSPNumber[]
        +target: number
        +fromString(input: string): SSP
    }

    class Literal {
        +id: Id
        +varName: VarName
        +negated: boolean
    }

    class Clause {
        +id: Id
        +literals: Literal[3]
    }

    class GraphNode {
        +id: Id
        +label: string
        +position: Position
        +color: number?
    }

    class GraphEdge {
        +id: Id
        +from: Id
        +to: Id
        +weight: number?
    }

    class SSPNumber {
        +id: Id
        +label: string
        +value: number[]
        +used: boolean
    }

    CNF3 *-- Clause
    Clause *-- Literal
    Graph *-- GraphNode
    Graph *-- GraphEdge
    SSP *-- SSPNumber
}

@enduml
